<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f2f2f2"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/group_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/group_name"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/group_name_et"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_name_tv"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:id="@+id/select_users_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_name_et"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/select_users"
        android:textSize="20sp" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_above="@id/btn_container"
        android:layout_below="@id/select_users_tv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_item_user" />

    <LinearLayout
        android:id="@+id/btn_container"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/save_group_btn"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/save_group"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/delete_group_btn"
            android:layout_width="wrap_content"
            android:text="@string/delete_group"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>